# groundhog

./: .gitignore  .hlint.yaml  .travis.yml  HISTORY  README.md  cabal.project  groundhog.cabal  requirements.apt  stack-ghc-7.10.yaml  stack-ghc-7.8.yaml  stack-ghc-8.0.yaml  stack-ghc-8.2.yaml  stack-ghc-8.4.yaml  stack-ghc-8.6.yaml  stack-ghc-8.8.yaml  stack-nightly.yaml  stack.yaml
Database/: Groundhog.hs
Database/Groundhog/: Core.hs  Expression.hs  Generic.hs  Instances.hs  TH.hs
Database/Groundhog/Generic/: Migration.hs  PersistBackendHelpers.hs  Sql.hs
Database/Groundhog/Generic/Sql/: Functions.hs  String.hs  Utf8.hs
Database/Groundhog/TH/: CodeGen.hs  Settings.hs
backends/mysql/: LICENSE  groundhog-mysql.cabal
backends/mysql/Database/Groundhog/: MySQL.hs
backends/postgresql/: HISTORY  groundhog-postgresql.cabal
backends/postgresql/Database/Groundhog/: Postgresql.hs
backends/postgresql/Database/Groundhog/Generic/Sql/: String.hs
backends/postgresql/Database/Groundhog/Postgresql/: Array.hs  Base.hs  Geometry.hs  Migration.hs
backends/sqlite/: HISTORY  groundhog-sqlite.cabal
backends/sqlite/Database/: Sqlite.hs
backends/sqlite/Database/Groundhog/: Sqlite.hs
backends/sqlite/Database/Groundhog/Generic/Sql/: Utf8.hs
bench/: SqlBench.hs  crit.hs  dbbench.hs  sqlbench.hs
examples/: LICENSE  README-basic.md  README-multidb.md  basic.hs  dbSpecificTypes.hs  embedded.hs  groundhog-examples.cabal  keys.hs  monadIntegration.hs  multidb.hs  primitive.hs  projections.hs  rawQueries.hs  sumTypes.hs  tables.hs  tryaction.hs  withoutQuasiQuotes.hs
groundhog/: HISTORY  LICENSE  changelog  groundhog.cabal
groundhog-inspector/: changelog  groundhog-inspector.cabal
groundhog-inspector/Database/Groundhog/: Inspector.hs
groundhog-inspector/examples/: OnePass.hs  PrintMappings.hs
groundhog-inspector/main/: Main.hs
groundhog-inspector/test/: Datatypes.hs  IntegratedTest.hs  createMappings.hs  mapping.yml  run.sh  testMappings.hs
groundhog-inspector/test/mysql/: composite_primary_key.sql  index.sql  key_type_mismatch.sql  nokeys.sql  not_mapped_reference.sql  primary_key.sql  types.sql
groundhog-inspector/test/postgresql/: composite_primary_key.sql  key_type_mismatch.sql  not_mapped_reference.sql  primary_key.sql  types.sql
groundhog-inspector/test/sqlite/: composite_primary_key.sql  constraint.sql  key_null_mismatch.sql  key_type_mismatch.sql  nokeys.sql  primary_key.sql  reference_on_actions.sql  types.sql
groundhog-mysql/: HISTORY  changelog  groundhog-mysql.cabal
groundhog-mysql/Database/Groundhog/: MySQL.hs
groundhog-pipes/: LICENSE  groundhog-pipes.cabal
groundhog-pipes/Database/Groundhog/: Pipes.hs
groundhog-postgresql/: HISTORY  changelog  groundhog-postgresql.cabal
groundhog-postgresql/Database/Groundhog/: Postgresql.hs
groundhog-postgresql/Database/Groundhog/Postgresql/: Array.hs  Geometry.hs  HStore.hs
groundhog-sqlite/: HISTORY  changelog  groundhog-sqlite.cabal
groundhog-sqlite/Database/: Sqlite.hs
groundhog-sqlite/Database/Groundhog/: Sqlite.hs
groundhog-test/: GroundhogTest.hs  Main.hs  groundhog  groundhog-sqlite  groundhog-test.cabal  groundhog-th  init_mysql.sql  init_postgresql.sql  main.hs
groundhog-test/Migration/: New.hs  Old.hs
groundhog-test/src/Groundhog/Test/: Main.hs  Util.hs
groundhog-test/src/Groundhog/Test/Specs/: GeneralSpec.hs  MigrationSpec.hs  MySQLSpec.hs  PostgresqlSpec.hs  SqliteSpec.hs
groundhog-test/src/Groundhog/Test/Types/: NewMigration.hs  OldMigration.hs  Types.hs
groundhog-th/: HISTORY  LICENSE  changelog  groundhog-th.cabal
groundhog-th/Database/Groundhog/: TH.hs
groundhog-th/Database/Groundhog/TH/: CodeGen.hs  CodeGen.hs~  Settings.hs  Settings.hs~
groundhog/Database/: Groundhog.hs
groundhog/Database/Groundhog/: Core.hs  Expression.hs  Generic.hs  Instances.hs
groundhog/Database/Groundhog/Generic/: Migration.hs  PersistBackendHelpers.hs  Sql.hs
groundhog/Database/Groundhog/Generic/Sql/: Functions.hs
groundhog/examples/: basic.hs  embedded.hs  monadIntegration.hs
test/: GroundhogTest.hs  example.hs  groundhog-mysql  groundhog-postgresql  groundhog-test.cabal  main.hs  tests.hs
test/Migration/: New.hs  Old.hs
