name:            groundhog
version:         0.0.1.1
license:         BSD3
license-file:    LICENSE
author:          Boris Lykah <lykahb@gmail.com>
maintainer:      Boris Lykah <lykahb@gmail.com>
synopsis:        Type-safe ADT-database mapping library.
description:     This library provides just the general interface and helper functions. You must use a specific backend in order to make this useful.
category:        Database
stability:       Non-stable
cabal-version:   >= 1.10
build-type:      Simple

library
    build-depends:   base                     >= 4         && < 5
                   , template-haskell
                   , bytestring               >= 0.9       && < 0.10
                   , transformers             >= 0.2.1     && < 0.3
                   , time                     >= 1.1.4     && < 1.3
                   , text                     >= 0.8       && < 0.12
                   , containers               >= 0.2       && < 0.5
                   , enumerator               >= 0.4.9     && < 0.5
                   , monad-control            >= 0.2       && < 0.3
                   , pool                     >= 0.1       && < 0.2
    exposed-modules: Database.Groundhog
                     Database.Groundhog.Core
                     Database.Groundhog.Generic
                     Database.Groundhog.Generic.Sql
                     Database.Groundhog.TH
    ghc-options:     -Wall
    default-language: Haskell2010