name:            groundhog-postgresql
version:         0.7.0.2
license:         BSD3
license-file:    LICENSE
author:          Boris Lykah <lykahb@gmail.com>
maintainer:      Boris Lykah <lykahb@gmail.com>
synopsis:        PostgreSQL backend for the groundhog library.
description:     This package uses postgresql-simple and postgresql-libpq.
category:        Database
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple

extra-source-files:
    changelog

library
    build-depends:   base                     >= 4         && < 5
                   , aeson                    >= 0.8       && < 0.12
                   , postgresql-simple        >= 0.3       && < 0.6
                   , postgresql-libpq         >= 0.6.1
                   , bytestring               >= 0.9
                   , blaze-builder            >= 0.3       && < 0.5
                   , transformers             >= 0.2.1     && < 0.6
                   , groundhog                >= 0.7       && < 0.8
                   , monad-control            >= 0.3       && < 1.1
                   , containers               >= 0.2
                   , text                     >= 0.8
                   , attoparsec               >= 0.8.5.3
                   , aeson                    >= 0.7
                   , resource-pool            >= 0.2.1
                   , time                     >= 1.1
                   , vector                   >= 0.10     && < 0.12
                   , resourcet                >= 1.1.2
    exposed-modules: Database.Groundhog.Postgresql
                     Database.Groundhog.Postgresql.Array
                     Database.Groundhog.Postgresql.Geometry
                     Database.Groundhog.Postgresql.HStore
    ghc-options:     -Wall -fno-warn-unused-do-bind
