name:            groundhog-sqlite
version:         0.6.0
license:         BSD3
license-file:    LICENSE
author:          Boris Lykah <lykahb@gmail.com>
maintainer:      Boris Lykah <lykahb@gmail.com>
synopsis:        Sqlite3 backend for the groundhog library
description:     It depends on direct-sqlite library which includes Sqlite C sources, so there are no system dependencies.
category:        Database
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple

extra-source-files:
    changelog

library
    build-depends:   base                     >= 4         && < 5
                   , bytestring               >= 0.9
                   , transformers             >= 0.2.1
                   , groundhog                >= 0.6       && < 0.7
                   , monad-control            >= 0.3       && < 0.4
                   , monad-logger             >= 0.3       && < 0.4
                   , containers               >= 0.2
                   , text                     >= 0.8
                   , direct-sqlite            >= 2.3.5
                   , resource-pool            >= 0.2.1
                   , unordered-containers
    exposed-modules: Database.Groundhog.Sqlite
    ghc-options:     -Wall -fno-warn-unused-do-bind

source-repository head
  type:     git
  location: git://github.com/lykahb/groundhog.git
