name:            groundhog-sqlite
version:         0.12.0
license:         BSD3
license-file:    LICENSE
author:          Boris Lykah <lykahb@gmail.com>
maintainer:      Boris Lykah <lykahb@gmail.com>
synopsis:        Sqlite3 backend for the groundhog library
description:     It depends on direct-sqlite library which includes Sqlite C sources, so there are no system dependencies.
category:        Database
stability:       Stable
cabal-version:   >= 1.10
build-type:      Simple

extra-source-files:
    changelog

library
    build-depends:   base                     >= 4         && < 5
                   , bytestring               >= 0.9
                   , transformers             >= 0.2.1
                   , groundhog                >= 0.12.0    && < 0.13
                   , monad-control            >= 0.3       && < 1.1
                   , containers               >= 0.2
                   , text                     >= 0.8
                   , direct-sqlite            >= 2.3.5
                   , resource-pool            >= 0.2.1
                   , unordered-containers
                   , resourcet                >= 1.1.2
    exposed-modules: Database.Groundhog.Sqlite
    ghc-options:     -Wall -fno-warn-unused-do-bind
    default-language: Haskell2010

source-repository head
  type:     git
  location: git://github.com/lykahb/groundhog.git
