name:            groundhog-test
version:         0.0.1
license:         BSD3
license-file:    LICENSE
author:          Boris Lykah <lykahb@gmail.com>
maintainer:      Boris Lykah <lykahb@gmail.com>
synopsis:        Tests for Groundhog
description:     Tests for Groundhog
category:        Database
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://github.com/lykahb/groundhog

Flag sqlite
    Description: test Sqlite
    Default: False

Flag postgresql
    Description: test PostgreSQL
    Default: False

Flag mysql
    Description: test MySQL
    Default: False

library

test-suite test
    type:          exitcode-stdio-1.0
    main-is:       Groundhog/Test/Main.hs

    build-depends: base >= 4 && < 5
                 , bytestring               >= 0.9
                 , transformers             >= 0.2.1 && < 0.6
                 , base64-bytestring
                 , mtl                      >= 2.0
                 , time                     >= 1.1.4
                 , text                     >= 0.8
                 , vector
                 , aeson                    >= 0.5
                 , scientific
                 , containers               >= 0.2
                 , monad-control            >= 0.3     && < 1.1
                 , monad-logger             >= 0.3     && < 0.4
                 , resource-pool            >= 0.2.1
                 , transformers-base
                 , template-haskell
                 , yaml                     >= 0.11    && < 0.12
                 , libyaml
                 , unordered-containers     >= 0.1.3
                 , aeson                    >= 0.7
                 , utf8-string              >= 0.3
                 , resourcet                >= 1.1.2
                 , safe-exceptions
                 , transformers-compat      >= 0.3
                 , exceptions
                 , hspec                    >= 2.0.0   && < 3


    hs-source-dirs: ./src, ../groundhog, ../groundhog-th, ../groundhog-sqlite, ../groundhog-postgresql, ../groundhog-mysql

    ghc-options:   -Wall

    other-modules: Database.Groundhog
                   Database.Groundhog.Core
                   Database.Groundhog.Expression
                   Database.Groundhog.Generic
                   Database.Groundhog.Generic.Migration
                   Database.Groundhog.Generic.Sql
                   Database.Groundhog.Generic.Sql.Functions
                   Database.Groundhog.Generic.PersistBackendHelpers
                   Database.Groundhog.Instances
                   Database.Groundhog.TH
                   Database.Groundhog.TH.Settings
                   Database.Groundhog.TH.CodeGen
                   Groundhog.Test.Specs.GeneralSpec
                   Groundhog.Test.Specs.MigrationSpec
                   Groundhog.Test.Specs.MySQLSpec
                   Groundhog.Test.Specs.PostgresqlSpec
                   Groundhog.Test.Specs.SqliteSpec
                   Groundhog.Test.Types.NewMigration
                   Groundhog.Test.Types.OldMigration
                   Groundhog.Test.Types.Types
                   Groundhog.Test.Util


    if flag(sqlite)
         build-depends: direct-sqlite           >= 2.3.5
                      , unordered-containers
         other-modules: Database.Groundhog.Sqlite
         cpp-options: -DWITH_SQLITE
    if flag(postgresql)
         build-depends:  postgresql-simple     >= 0.2
                       , postgresql-libpq      >= 0.6
                       , attoparsec            >= 0.8.5.3
         other-modules:  Database.Groundhog.Postgresql
                       , Database.Groundhog.Postgresql.Array
                       , Database.Groundhog.Postgresql.Geometry
                       , Database.Groundhog.Postgresql.HStore
         cpp-options: -DWITH_POSTGRESQL
    if flag(mysql)
        build-depends:  mysql-simple          >= 0.2.2.3
                      , mysql                 >= 0.1.1.3
        other-modules:  Database.Groundhog.MySQL
        cpp-options: -DWITH_MYSQL

source-repository head
  type:     git
  location: git://github.com/lykahb/groundhog.git
