name:            groundhog-th
version:         0.4.0.3
license:         BSD3
license-file:    LICENSE
author:          Boris Lykah <lykahb@gmail.com>
maintainer:      Boris Lykah <lykahb@gmail.com>
synopsis:        Type-safe datatype-database mapping library.
description:     This library helps to generate instances for Groundhog datatypes.
category:        Database
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple

library
    build-depends:   base                     >= 4         && < 5
                   , bytestring               >= 0.9
                   , groundhog                >= 0.4.0     && < 0.5.0
                   , template-haskell
                   , time                     >= 1.1.4
                   , containers               >= 0.2
                   , yaml                     >= 0.8.1
                   , utf8-string              >= 0.3       && < 0.4
    exposed-modules: Database.Groundhog.TH
                     Database.Groundhog.TH.Settings
                     Database.Groundhog.TH.CodeGen
    ghc-options:     -Wall
    
source-repository head
  type:     git
  location: git://github.com/lykahb/groundhog.git
