name:            groundhog
version:         0.3.1.1
license:         BSD3
license-file:    LICENSE
author:          Boris Lykah <lykahb@gmail.com>
maintainer:      Boris Lykah <lykahb@gmail.com>
synopsis:        Type-safe datatype-database mapping library.
description:     This library maps your datatypes to a relational model, in a way similar to what ORM libraries do in OOP. The schema can be configured flexibly which makes integration with existing databases easy. Groundhog supports schema migrations, composite keys, advanced expressions in queries, and much more. See examples folder on GitHub.
category:        Database
stability:       Non-stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/lykahb/groundhog

library
    build-depends:   base                     >= 4       && < 5
                   , bytestring               >= 0.9
                   , transformers             >= 0.2.1
                   , mtl                      >= 2.0
                   , time                     >= 1.1.4
                   , text                     >= 0.8
                   , blaze-builder            >= 0.3.0.0
                   , containers               >= 0.2
                   , monad-control            >= 0.3
                   , monad-logger             >= 0.3
                   , transformers-base
    exposed-modules: Database.Groundhog
                     Database.Groundhog.Core
                     Database.Groundhog.Expression
                     Database.Groundhog.Generic
                     Database.Groundhog.Generic.Migration
                     Database.Groundhog.Generic.Sql
                     Database.Groundhog.Generic.Sql.Functions
                     Database.Groundhog.Generic.PersistBackendHelpers
                     Database.Groundhog.Instances
    ghc-options:     -Wall
    
source-repository head
  type:     git
  location: git://github.com/lykahb/groundhog.git
