name:            groundhog
version:         0.7.0.2
license:         BSD3
license-file:    LICENSE
author:          Boris Lykah <lykahb@gmail.com>
maintainer:      Boris Lykah <lykahb@gmail.com>
synopsis:        Type-safe datatype-database mapping library.
description:     This library maps your datatypes to a relational model, in a way similar to what ORM libraries do in object-oriented programming. The mapping can be configured to work with almost any schema. Groundhog supports schema migrations, composite keys, advanced expressions in queries, and much more. See tutorial <https://www.fpcomplete.com/user/lykahb/groundhog> and examples <https://github.com/lykahb/groundhog/tree/master/examples> on GitHub.
category:        Database
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/lykahb/groundhog

extra-source-files:
    changelog

library
    build-depends:   base                     >= 4          && < 5
                   , bytestring               >= 0.9
                   , base64-bytestring
                   , transformers             >= 0.2.1      && < 0.5
                   , mtl                      >= 2.0
                   , time                     >= 1.1.4
                   , aeson                    >= 0.5
                   , scientific
                   , text                     >= 0.8
                   , blaze-builder            >= 0.3        && < 0.5
                   , containers               >= 0.2
                   , monad-control            >= 0.3        && < 1.1
                   , monad-logger             >= 0.3        && < 0.4
                   , transformers-base
    exposed-modules: Database.Groundhog
                     Database.Groundhog.Core
                     Database.Groundhog.Expression
                     Database.Groundhog.Generic
                     Database.Groundhog.Generic.Migration
                     Database.Groundhog.Generic.Sql
                     Database.Groundhog.Generic.Sql.Functions
                     Database.Groundhog.Generic.PersistBackendHelpers
                     Database.Groundhog.Instances
    ghc-options:     -Wall
    
source-repository head
  type:     git
  location: git://github.com/lykahb/groundhog.git
