name:            groundhog
version:         0.12.0
license:         BSD3
license-file:    LICENSE
author:          Boris Lykah <lykahb@gmail.com>
maintainer:      Boris Lykah <lykahb@gmail.com>
synopsis:        Type-safe datatype-database mapping library.
description:     This library maps your datatypes to a relational model, in a way similar to what ORM libraries do in object-oriented programming. The mapping can be configured to work with almost any schema. Groundhog supports schema migrations, composite keys, advanced expressions in queries, and much more. See tutorial <https://www.schoolofhaskell.com/user/lykahb/groundhog> and examples <https://github.com/lykahb/groundhog/tree/master/examples> on GitHub.
category:        Database
stability:       Stable
cabal-version:   >= 1.10
build-type:      Simple
homepage:        http://github.com/lykahb/groundhog

extra-source-files:
    changelog

library
    build-depends:   base                     >= 4.5        && < 5
                   , bytestring               >= 0.10
                   , base64-bytestring
                   , transformers             >= 0.2.1      && < 0.6
                   , mtl                      >= 2.0
                   , time                     >= 1.1.4
                   , attoparsec               >= 0.11
                   , aeson                    >= 0.7
                   , scientific
                   , text                     >= 0.8
                   , containers               >= 0.2
                   , monad-control            >= 0.3        && < 1.1
                   , transformers-base
                   , resourcet                >= 1.1.2
                   , safe-exceptions
                   , transformers-compat      >= 0.3

    exposed-modules: Database.Groundhog
                     Database.Groundhog.Core
                     Database.Groundhog.Expression
                     Database.Groundhog.Generic
                     Database.Groundhog.Generic.Migration
                     Database.Groundhog.Generic.Sql
                     Database.Groundhog.Generic.Sql.Functions
                     Database.Groundhog.Generic.PersistBackendHelpers
                     Database.Groundhog.Instances
    ghc-options:     -Wall
    default-language: Haskell2010

source-repository head
  type:     git
  location: git://github.com/lykahb/groundhog.git
