name:            groundhog-postgresql
version:         0.0.1.1
license:         BSD3
license-file:    LICENSE
author:          Boris Lykah <lykahb@gmail.com>
maintainer:      Boris Lykah <lykahb@gmail.com>
synopsis:        Backend for the groundhog library using PostgreSQL.
description:     This package uses HDBC-postgresql.
category:        Database
stability:       Non-stable
cabal-version:   >= 1.6
build-type:      Simple

library
    build-depends:   base                    >= 4         && < 5
                   , HDBC                    >= 2.2.6     && < 2.3
                   , HDBC-postgresql         >= 2.2.3.1   && < 2.3
                   , bytestring              >= 0.9.1     && < 0.10
                   , transformers            >= 0.2.1     && < 0.3
                   , groundhog               >= 0.0.1     && < 0.1
                   , monad-control           >= 0.2       && < 0.3
                   , containers              >= 0.2       && < 0.5
                   , enumerator              >= 0.4.9     && < 0.5
                   , utf8-string             >= 0.3.4     && < 0.4
                   , pool                    >= 0.1       && < 0.2
                   , time                    >= 1.1       && < 1.3
    exposed-modules: Database.Groundhog.Postgresql
    ghc-options:     -Wall -fno-warn-unused-do-bind
