name:            groundhog-postgresql
version:         0.2.0
license:         BSD3
license-file:    LICENSE
author:          Boris Lykah <lykahb@gmail.com>
maintainer:      Boris Lykah <lykahb@gmail.com>
synopsis:        PostgreSQL backend for the groundhog library.
description:     This package uses postgresql-simple and postgresql-libpq.
category:        Database
stability:       Non-stable
cabal-version:   >= 1.6
build-type:      Simple

library
    build-depends:   base                    >= 4         && < 5
                   , postgresql-simple       >= 0.2       && < 0.3
                   , postgresql-libpq        >= 0.6.1     && < 0.9
                   , bytestring              >= 0.9
                   , transformers            >= 0.2.1     && < 0.4
                   , groundhog               >= 0.2.0     && < 0.3.0
                   , monad-control           >= 0.3       && < 0.4
                   , containers              >= 0.2
                   , text                    >= 0.8       && < 0.12
                   , attoparsec              >= 0.8.5.3
                   , pool-conduit            >= 0.1       && < 0.2
                   , time                    >= 1.1
    exposed-modules: Database.Groundhog.Postgresql
                     Database.Groundhog.Postgresql.Array
                     Database.Groundhog.Postgresql.Geometry
    ghc-options:     -Wall -fno-warn-unused-do-bind
